// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

//option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option go_package = "github.com/aditya-tech-consulting/go-grpc/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

  // Sends another greeting
  rpc CreateProfessor (ProfessorRequest) returns (ProfessorReply) {}
  // Sends another greeting
  rpc CreateCourse (CourseRequest) returns (CourseReply) {}
  rpc CreateStudent(StudentRequest) returns (StudentReply) {}
  rpc CreateStudentCourse(StudentCourseRequest) returns (StudentCourseReply){}
  rpc GetStudentCourse(StudentCourseSearchRequest) returns (StudentCourseSearchReply){}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message ProfessorRequest{
  string name = 1;
  string subject = 2;
  string id =3;
}
message ProfessorReply{
  string name = 1;
  string subject = 2;
  string id =3;
}

message CourseRequest{
  string name = 1;
  string id =2;
}
message CourseReply{
  string name = 1;
  string id =2;
}

message StudentRequest{
  string name = 1;
  string id =2;
}
message StudentReply{
  string name = 1;
  string id =2;
  
}

message StudentCourseRequest{
  string studentName = 1;
  string courseName = 2;
  string professorName = 3;
}
message StudentCourseReply{
  string studentName = 1;
  string courseName = 2;
  string professorName = 3;
}
message StudentCourseSearchRequest{
  string studentName = 1;
  string courseName = 2;
}
message StudentCourseSearchReply{
  string studentName = 1;
  string courseName = 2;
  string professorName = 3;
}